# CherrypySystray

./: pyproject.toml
