[build-system]
requires = [
    "setuptools>=45",
]
build-backend = "setuptools.build_meta"

[project]
name = "CherrypSysTray"
version = "0.1.1"
description = "Simple plugin interface for infi.systray that allows systray to start and stop according to Cherrypy's signals."
authors = [
    {name="SawyerSteven", email="sawyerstevenk@gmail.com"}
]
maintainers = [
    {name="Labrys of Knossos", email="labrys@users.noreply.github.com"}
]
readme = {content-type='utf-8', file='README.md'}
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cherrypy',
    'infi.systray',
]

[project.urls]
repository = "https://github.com/labrys/cherrypy-systray"

[tool.setuptools.packages.find]
where = [""]
include = ["cherrypysystray"]
